--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body * {
   max-width: 95%;
   display: grid;
   margin: 0 auto;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr 1fr;
   grid-template-areas:
@@ -21,4 +21,14 @@ body * {
   "f f f";
   color: #fff;
   padding: 1px 0;
+}
+
+.wrapper__content {
+  grid-area: c;
+  border: 1px solid rgba(255,0,0,.2);
+}
+
+
+h1 {
+  margin: 0;
 }
