--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -14,12 +14,20 @@
 }
 
 .dialogs_item {
+    display: block;
+    color: #ffffff;
+    text-decoration: none;
     font-size: 0.8em;
     padding: 15px 25px;
     margin: 10px 0;
     border: 1px solid rgba(255,0,0,0.2);
     transition: all 0.2s;
     cursor: pointer;
+}
+
+.dialogs_item span {
+    display: block;
+    margin: 5px 0;
 }
 
 .dialogs_item.active, .dialogs_item:hover {
