--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -2,31 +2,7 @@
     border: 1px solid rgba(255,0,0,.2);
 }
 
-.profileBase {
-    display: flex;
-}
-
 .profile__info {
     max-width: 100%;
-}
-
-.profile__photo img {
-    max-width: 200px;
-}
-
-.latestPosts {
-    padding: 20px;
-}
-
-.userinfo {
-    padding: 10px;
-}
-
-.username {
-    font-size: 1em;
-    margin: 0;
-}
-
-.description {
-    font-size: 0.6em;
+    padding: 20px 20px;
 }
