--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -45,6 +45,10 @@
     cursor: pointer;
 }
 
+.latestPosts {
+    display: block;
+}
+
 .buttons button:hover {
     background-color: rgba(255,255,255,1);
     color: #000;
