--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -38,7 +38,7 @@
     display: block;
     width: 70%;
     box-sizing: border-box;
-    padding-left: 30px;
+    padding: 30px 10px 30px 30px;
 }
 
 .message_item {
