Lesson-29 small homework

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -14,8 +14,9 @@
 }
 
 .messages_list {
-    display: block;
     width: 70%;
     box-sizing: border-box;
     padding: 30px 10px 30px 30px;
+    display: flex;
+    flex-flow: column;
 }
