--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -2,5 +2,24 @@
     font-size: 0.8em;
     padding: 15px 25px;
     margin: 10px 0;
+    width: 90%;
+    box-sizing: border-box;
     border: 1px solid rgba(255,0,0,0.2);
+    display: flex;
+    align-items: center;
+}
+
+.message_item img {
+    width: 50px;
+    height: 50px;
+    border-radius: 15px;
+    margin-right: 20px;
+}
+
+.message_left {
+    align-self: flex-start;
+}
+
+.message_right {
+    align-self: flex-end;
 }
