--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -20,3 +20,42 @@
     display: flex;
     flex-flow: column;
 }
+
+.sendMessage textarea {
+    display: block;
+    width: 100%;
+    height: 90px;
+    padding: 10px;
+    box-sizing: border-box;
+    resize: none;
+    border: 1px solid #fff;
+}
+
+.sendMessage textarea:focus {
+    outline: none;
+}
+
+.buttons {
+    display: flex;
+    align-self: flex-end;
+    justify-content: right;
+    align-items: center;
+    padding: 15px 0;
+}
+
+.buttons button {
+    display: flex;
+    padding: 10px 20px;
+    background-color: rgba(0,0,0,0);
+    border-radius: 0;
+    border: 1px solid #ffffff;
+    transition: all 0.2s;
+    margin: 0 0 0 10px;
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.6em;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
