--- a/src/components/Dialogs/Dialog/Dialog.module.css
+++ b/src/components/Dialogs/Dialog/Dialog.module.css
@@ -4,8 +4,8 @@
     text-decoration: none;
     font-size: 0.8em;
     padding: 15px 25px;
-    margin: 10px 0;
-    border: 1px solid rgba(255,0,0,0.2);
+    margin: 0 0 10px;
+    background-color: #353c46cf;
     transition: all 0.2s;
     cursor: pointer;
 }
