--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -1,10 +1,10 @@
 .message_item {
     font-size: 0.8em;
     padding: 15px 25px;
-    margin: 10px 0;
+    margin: 0 0 10px;
     width: 90%;
     box-sizing: border-box;
-    border: 1px solid rgba(255,0,0,0.2);
+    background-color: #353c46cf;
     display: flex;
     align-items: center;
 }
