--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,8 @@
 .footer {
     grid-area: f;
-    border: 1px solid rgba(255,0,0,.2);
+    padding: 10px;
     font-size: 0.8em;
     display: flex;
     justify-content: center;
+    background-color: #171a1e70;
 }
