--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,9 @@
 .header {
     grid-area: h;
-    border: 1px solid rgba(255,0,0,.2);
+    padding: 10px;
+    background-color: #171a1e70;
 }
 
 .header .logo img {
-    max-width: 40px;
+    max-width: 30px;
 }
