--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -7,7 +7,7 @@
     flex-flow: row;
     width: 100%;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     margin: 20px 0;
 }
 
@@ -30,4 +30,3 @@
     width: 15%;
     text-align: right;
 }
-
