Lesson-55 first part

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -30,3 +30,9 @@
     width: 15%;
     text-align: right;
 }
+
+.selectPage {
+    border: 1px solid #fff;
+    display: inline-block;
+    padding: 2px 4px;
+}
